--- a/NomadJukebox/Changes
+++ b/NomadJukebox/Changes
@@ -1,6 +1,12 @@
 Revision history for Perl extension POE::Component::NomadJukebox::Device.
 
-0.02  Thu Sep  9 21:07:31 2004
+0.03  Mon Sep 13 23:25:12 2004
+	- added GetFile
+	- fixed FileList
+	- added extended tags to TrackList
+	- few other fixes
+	
+0.02  Mon Sep 13 11:07:31 2004
 	- converted to POE::Component::NomadJukebox::Device
 		namespace from NJB (author: Anthony Taylor <tony@searchc.org>)
 	- added many more commands from the libnjb api
