--- a/README
+++ b/README
@@ -78,41 +78,46 @@ METHODS
     should be fired during a file transfer.
 
 EVENTS
+    All these events can be called with $kernel->call(), and the return
+    values are usually undef on error, or an id in the case of send_track or
+    send_file.
+
   discover
     Locates all connected, and turned on, Nomad Jukebox devices. Fires
     njb_discover event with an array ref of hash refs with info about each
     device in the keys to the parent session or undef if it failed to find
-    any devices. This event can also be called, it will return an array or
-    undef if non were found.
+    any devices.
 
   open => <device_id>
     This will open the device specified by the device_id from the discover
     event. You MUST do this before sending any other events that operate on
     the device. This fires the njb_opened event to the parent on success
     with the device id as ARG0 and 1 as ARG1. On failure to open the device,
-    ARG1 for the njb_open event will be undef. This event can also be
-    called, it returns the return value only.
+    ARG1 for the njb_open event will be undef.
 
   track_list
     Requests the track list from the device. It fires njb_track_list with an
     array ref of hash refs. Each hash ref has info about the track. ID is
-    the important key for other events like play, and get_track. This event
-    can also be called, it returns the same.
+    the important key for other events like play, and get_track. If you pass
+    a 1 as ARG0 to track_list, extended tags will be turned on, but it will
+    be much slower. (AND IT BLOCKS LONGER)
 
   play_list
     Requests the play list from the device. It fires njb_play_list with an
     array ref of hash refs. Each hash ref has info about the track. ID is
-    the important key for other events like play, and get_track. This event
-    can also be called, it returns the same.
+    the important key for other events like play, and get_track.
 
     Here's an example of a playlist dump, notice that I have a playlist with
     no valid tracks. Make sure you account for these end cases. The array in
-    the TRACKS key is a list of track ID's from the track_list.
+    the TRACKS key is a list of track ID's from the track_list. The STATE
+    key 0 is new, 1 is unchanged, 2 is change name, 3 change tracks. I'm not
+    sure what 2 and 3 mean yet.
 
             {
                     'TRACKS' => [],
                     'ID' => 71520,
-                    'TAG' => 140503840
+                    'NAME' => 'Audio Tour',
+                    'STATE' => 1
             },
             {
                     'TRACKS' => [
@@ -128,33 +133,32 @@ EVENTS
                             511915
                     ],
                     'ID' => 727376,
-                    'TAG' => 141851304
+                    'NAME' => 'aaa',
+                    'STATE' => 3
             }
 
   file_list
     Requests the file list from the device. It fires njb_file_list with an
     array ref of hash refs. Each hash ref has info about the file. ID is the
-    important key for other events like get_file, delete_file. This event
-    can also be called, it returns the same.
+    important key for other events like get_file, delete_file.
 
   get_track => { <track_hashref> } => </path/to/file.mp3>
     This event will retrieve the track specified by the track hashref from
     the track_list event and it will save it to the path specified. The full
-    directory path should exist, it will not create it for you.
+    directory path should exist, it will not create it for you. The track
+    hash ref should have the TAG key (for speed) or the ID key, all others
+    are not used.
 
   close
     Releases control of the device. You probably want to use the shutdown
-    event. This fires the njb_closed event to the parent. It Can be called
-    also.
+    event. This fires the njb_closed event to the parent.
 
   set_owner => 'owner name'
     Allows you to set the owner's name. Fires njb_set_owner with the owner
-    info sent in ARG0 and the return value in ARG1. It also can be called
-    but you only get the return value.
+    info sent in ARG0 and the return value in ARG1.
 
   get_owner
-    Fires njb_owner event back to parent with owner info in ARG0, or it can
-    be called like so: my $owner = $kernel->call(njb => 'get_owner');
+    Fires njb_owner event back to parent with owner info in ARG0.
 
   send_track => '/path/to/file.mp3' or send_track => <hashref track info>
     This will send a file to the Nomad Jukebox. You can specify the full
@@ -172,30 +176,38 @@ EVENTS
 
     It will fire the send_track event to the parent session with the track
     info in a hash ref as ARG0 and the trackid as ARG1 on success. On
-    failure ARG1 will be undef and ARG2 _might_ have an error string. This
-    event can be called, and it will return the trackid on success or undef
-    on failure.
+    failure ARG1 will be undef and ARG2 _might_ have an error string.
 
   send_file => { FILE => '/path/to/file.tar.gz', NAME => 'file.tar.gz' }
     This will send a file to the Nomad Jukebox. It will fire event
     njb_send_file with the file hash ref as ARG0 and the fileid as ARG1. On
-    failure, ARG1 will be undef, and ARG2 _might_ have an error string. This
-    event can be called, and it will return the fileid on success or undef
-    on failure.
+    failure, ARG1 will be undef, and ARG2 _might_ have an error string.
+
+  get_file => { ID => <ID> } => </path/to/file.tar.gz>
+    This event will retrieve the file specified by the ID in the hash ref
+    and it will save it to the path specified. The full directory path
+    should exist, it will not create it for you. I used a hash ref so I
+    could expand the file selection at a later time, (ie. by NAME). It fires
+    njb_get_file with the hash ref as ARG0 the file path as ARG1 and the
+    return value as ARG2.
 
   play => <ID>
     Starts a track specified by <ID> you can get this id by looking at the
     ID key of a track in the track list. See the track_list event. Fires
-    njb_play event back to parent session.
+    njb_play event back to parent session. ARG0 is the <ID> and ARG1 is the
+    return value.
 
   stop
-    Stops playback, and it fires njb_stop event back to parent session.
+    Stops playback, and it fires njb_stop event back to parent session. The
+    return value is in ARG0.
 
   pause
     Pauses playback, and it fires njb_pause event back to parent session.
+    The return value is in ARG0.
 
   resume
     Resumes playback, and it fires njb_resume event back to parent session.
+    The return value is in ARG0.
 
   seek_track => <position>
     Seeks playing track to <position>. It fires njb_seek_track event back to
@@ -203,12 +215,10 @@ EVENTS
 
   set_tmpdir => '/tmp/path'
     Allows you to set the temp directory. Fires njb_set_tmpdir with the temp
-    dir in ARG0 and the return value in ARG1. It also can be called but you
-    only get the return value.
+    dir in ARG0 and the return value in ARG1.
 
   get_tmpdir
-    Fires njb_tmpdir event back to parent with temp dir in ARG0, or it can
-    be called like so: my $dir = $kernel->call(njb => 'get_tmpdir');
+    Fires njb_tmpdir event back to parent with temp dir in ARG0.
 
   shutdown
     Releases control of the Nomad Jukebox with close() and ends the session.
@@ -216,18 +226,15 @@ EVENTS
 
   delete_play_list => <plid>
     Allows you to delete a playlist. Fires njb_delete_play_list with the
-    playlist id in ARG0 and the return value in ARG1. It also can be called
-    but you only get the return value.
+    playlist id in ARG0 and the return value in ARG1.
 
   delete_track => <trackid>
     Allows you to delete a track. Fires njb_delete_track with the playlist
-    id in ARG0 and the return value in ARG1. It also can be called but you
-    only get the return value.
+    id in ARG0 and the return value in ARG1.
 
   delete_file => <fileid>
-    Allows you to delete a file. Fires njb_delete_file with the file id in
-    ARG0 and the return value in ARG1. It also can be called but you only
-    get the return value.
+    Allows you to delete a file. Fires njb_delete_file with ehe file id in
+    ARG0 and the return value in ARG1.
 
   disk_usage
     Requests the disk usage from the device. It fires njb_disk_usage with a
@@ -237,11 +244,10 @@ EVENTS
 
   adjust_sound => <type> => <value>
     Changes various aspects of sound from the device. It fires
-    njb_adjust_sound with the return value. This event can also be called.
-    The types: volume, bass, treble, muting, midrange, midfreq, eax, eaxamt,
-    headphone, rear, and eqstatus **NOTE: only volume is supported by
-    libnjb, so don't expect any of the others to work until somone updates
-    libnjb with this ability.
+    njb_adjust_sound with the return value. The types: volume, bass, treble,
+    muting, midrange, midfreq, eax, eaxamt, headphone, rear, and eqstatus.
+    **NOTE: only volume is supported by libnjb, so don't expect any of the
+    others to work until somone updates libnjb with this ability.
 
 UNSOLICTED EVENTS
     During file transfers, the njb_progress event (or other event specified
